<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/calendar"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/achievement_rate_container">

            <TextView
                android:text="@string/habit_start_date_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/start_date"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/achievement_rate_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:text="@string/habit_achievement_rate_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/achievement_rate"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/achievement_rate_container">

            <TextView
                android:text="@string/habit_continued_days_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/continued_days"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorMonthBg">

            <RelativeLayout
                android:id="@+id/left_arrow"
                android:layout_width="56dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_left_arrow"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/month_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

            <RelativeLayout
                android:id="@+id/right_arrow"
                android:layout_width="56dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="@color/colorWeekBg">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_sun"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_mon"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_tue"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_wed"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_thu"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_fri"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_sat"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="bottom"/>

        </LinearLayout>

        <GridView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp"
            android:layout_marginBottom="1dp"/>
    </LinearLayout>
</RelativeLayout>